example/www/middleware/stuff/errors/mad/bad.mw.js
module.exports = {
    middleware: [(req,res,next)=>{throw new Error("Made to fail")}],
}